# FazAI

./: .MCP_OPNSENSE.key  .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLIANCE_CHECK.md  CONTENT  CONTENT.txt  CONTEXT.md  CONTRIBUTING.md  Contexto Atual - FazAI v2-26-09.txt  DIFERENCA_MODS.md  DOCUMENTACAO_COMPLETADA.md  DOCUMENTACAO_V2.0.md  Deep-plan.txt  Dockerfile  Dockerfile.full  Dockerfile.installer-test  EXEMPLOS_RELAY.md  FLUXO_INTELIGENTE.md  FazAI_CLI_Tools_Documentation.md  Fazai-inteligente.txt  Fluxo_de_atividades_complexas.txt  GEMMA_QUICKSTART.md  GUIA_PR.md  GUIA_TECNICO.md  GeGe_claudio.mcp  IMPROVEMENTS_v1.41.0.md  INSTALL_SH_FIX_SUMMARY.md  LICENSE  LICENSE-CC-BY-4.0.md  LOGS_MANAGEMENT.md  MANUAL-DE-USO.md  MANUAL_COMPLETO.md  MANUAL_DO_USUARIO.md  MANUAL_FERRAMENTAS.md  (+80 more)
.claude/: index.json  settings.local.json
.claude/plan/: contexto-backup-fazai-analysis.md  indexacao-profissional-claude-md.md  indice-claude-md-atual.md
.cursor/: argv.json  cli-config.json  environment.json
.cursor/rules/: procedimentosbasicos.mdc  repolocal-ambiente.mdc
.github/: ISSUE_62_RESOLUTION.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  pester-tests.yml   # Workflow para executar testes no GitHub Actions
.windsurf/rules/: procedimentosbasicos.md  repolocal-ambiente.md
SUMARY_DOCS_FILES/: CHANGELOG.md  RESUMO_FAZAI.TXT  USAGE_GEMMA_NL_EXEC.md  fazai  fazai_cli_client.py  fazai_gemma_worker.py  gemma_worker_client.py
SUMARY_DOCS_FILES/etc/fazai/: complex_tasks.conf.example  malware_signatures.txt
beta/fazai_genai_framework/: .env.example  API-REFERENCE.md  DEPLOYMENT.md  FRAMEWORK_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  basic_usage.py  cache_manager.py  chart_script.py  chart_script_1.py  claude_import.py  claude_integration.py  fallback_manager.py  fazai_integration.py  framework_config.py  genai_engine.py  genai_mini_framework.py  import_claude.py  memory_manager.py  requirements.txt  run_servers.sh  script.py  script_1.py  script_10.py  script_11.py  script_12.py  script_13.py  script_14.py  script_2.py  script_3.py  script_4.py  script_5.py  script_6.py  script_7.py  script_8.py  script_9.py  setup.sh  tests.py
beta/gmail-autogetChat-mcp/: .env.example  auth-setup.ts  fazai-gmail-mcp-server.md  fazai-setup.md  gmail-setup.md  install.sh  package.json  script.py  server.ts  test-mcp.sh  tsconfig.json
claude-mcp/: index.js  package.json
context/: andarilho-context.md  codex-manifesto.md  todo-manual.md
dev/: README.md  build-standalone.sh  genaiscript.js  install_dev_tools.sh
docs/: CONTAINER_MANAGER.md  FLUXO_DE OPERACAO_FUNDAMENTAL_DESCRITO.txt  ROADMAP.md  TODO.md
docs/analise/: bugs_criticos.txt
etc/fazai/: agent.conf  dos2unixAll.sh  fazai-completion.sh  fazai.conf  fazai.conf.example  fazai.service  main.js  rbl_list.txt
etc/fazai/mods/: fazai_mod.h  system_mod.c
etc/fazai/tools/: system.js  system_info.js  user.js
opt/: prioridades.txt
opt/fazai/: .coverage
opt/fazai/lib/: complex_tasks.js  context7_module.py  deepseek_helper.js  deepseek_helper_standalone.c  fazai_helper.js  genaiscript.js  main.js  mcp_opnsense.js  opnsense_registry.js
opt/fazai/mods/: APAGAR_ESTE_DIRETORIO_DE_MODS_UNIFICADO_EM_LIB_MODS.TXT  main.js  system_mod.c
opt/fazai/tools/: agent_supervisor.js  alerts.js  auto_tool.js  blacklist_check.js  claude_mcp_automation.js  claudio_qdrant_integration.js  cloudflare.js  completion_verification_agent.sh  container_manager_tui.py  context7.js  crowdsec.js  (+34 more)
pesquisa/: Fractura de Coerência Contextual(FCC).txt
scripts/: build_gemma_sbs.py  fzsamba  install-web2shell.sh  install.sh  my-smbdfe80790f.pp  my-smbdfe80790f.te  postbuild.js  qdrant_migrate_persona.py  start-codex.sh  verify-engine.sh
scripts/ansible/: setup0_selinux_roles.sh  setup1_patch.sh  setup2_patch.sh
src/: apiKeyUtils-fazai.ts  app.ts  askAI.ts  askPrompt.ts  cli-mode.ts  config.ts  linux-admin.ts  linux-executor.ts  linux-prompt.ts  logger.ts  memory.ts  models.ts  research.ts  system-info.ts  types-linux.ts  vector-store.ts
src/mcp/: client.ts  context7.ts  server.ts
tests/: cli.test.sh  completion_verification.test.sh  container_manager.test.sh  fazai-debug-test.sh  fazai.tests.ps1        # Testes principais do FazAI  install_uninstall.test.sh  system-tools.tests.ps1 # Testes para ferramentas do sistema  test-improvements.sh  test_cli_worker_integration.sh  test_gemma_native.py  test_mcp_integration.js  test_mcp_simple.js  test_natural_cli_order.sh  test_socket_debug.js  test_transcendental.js  test_windsurf_mcp.js  test_worker_client.js  test_worker_fixed.js  test_worker_interactive.js  test_worker_protocol.js  test_worker_protocol_correct.js  test_worker_raw.js  test_worker_simple.js  version.test.sh
tui/: Cargo.toml
tui/src/: main.rs
worker/: CMakeLists.txt  DEPLOYMENT_GUIDE.md  GEMMA_INTEGRATION.md  README.md  build.sh  check_build_errors.sh  debug_crash_analysis.sh  fix_and_rebuild.sh  fix_core_dumps_and_ipc.sh  fix_generate_api.sh  fix_kvcache_rebuild.sh  fix_kvcache_removal.sh  fix_worker_errors.sh  monitor_build.sh  qdrant_personality.js  quick_fix_rebuild.sh  run_quick_test.sh  run_tests.sh  setup_gemma.sh  setup_gemma_env.sh  test_prompt_generation.sh  test_worker_stability.sh  validate_claudio_integration.sh
worker/.claude/: settings.local.json
worker/lib/: gemma_c_api.cpp  gemma_c_api_real.cpp
worker/lib/sentencepiece/include/src/: sentencepiece_processor.h
worker/src/: contexto_completo_anterior-14-09.md  enhanced_shell_exec.hpp  gemma_api.h  gemma_wrapper.cpp  gemma_wrapper.h  ipc.cpp  ipc.hpp  logging.hpp  main.cpp  qdrant_client.cpp  qdrant_client.h  qdrant_integration.cpp  qdrant_integration.hpp  qdrant_memory_manager.hpp  worker.cpp  worker.hpp
worker/stubs/: CMakeLists.txt  gemma_stubs.cpp
worker/tests/: test_client.py  test_create_conta_sh.sh
worker/tests/integration/: test_service_integration.sh
worker/tools/: interactive.py
(+260 files in other folders)
